--- a/learning-app-ecommerce.conf
+++ b/learning-app-ecommerce.conf
@@ -1,7 +1,8 @@
 server {
 
 listen 80;
-root /var/www/html/learning-app-ecommerce ;
+root /var/www/html/;
+#root /var/www/html/learning-app-ecommerce ;
 
 location / {
  try_files $uri $uri/ =500;
