--- a/learning-app-ecommerce.conf
+++ b/learning-app-ecommerce.conf
@@ -3,6 +3,7 @@ server {
 listen 80;
 #root /var/www/html/;
 root /var/www/html/learning-app-ecommerce ;
+index index.php;
 
 location / {
  try_files $uri $uri/ =500;
