--- a/learning-app-ecommerce.conf
+++ b/learning-app-ecommerce.conf
@@ -42,7 +42,7 @@ server {
 	root /var/www/html/learning-app-ecommerce;
 
 	# Add index.php to the list if you are using PHP
-	index index.html index.htm index.nginx-debian.html;
+	index index.php;
 
 	server_name _;
 
