--- a/learning-app-ecommerce.conf
+++ b/learning-app-ecommerce.conf
@@ -39,7 +39,7 @@ server {
 	#
 	# include snippets/snakeoil.conf;
 
-	root /var/www/html/learning-app-ecommerce;
+	root /var/www/html/;
 
 	# Add index.php to the list if you are using PHP
 	index index.php;
@@ -55,7 +55,7 @@ server {
 	# pass PHP scripts to FastCGI server
 	#
 	location ~ \.php$ {
-	#include snippets/fastcgi-php.conf;
+	include snippets/fastcgi-php.conf;
 	#
 	#	# With php-fpm (or other unix sockets):
 		fastcgi_pass unix:/run/php/php8.1-fpm.sock;
