--- a/learning-app-ecommerce.conf
+++ b/learning-app-ecommerce.conf
@@ -39,7 +39,7 @@ server {
 	#
 	# include snippets/snakeoil.conf;
 
-	root /var/www/html/;
+	root /var/www/html/learning-app-ecommerce;
 
 	# Add index.php to the list if you are using PHP
 	index index.php;
