--- a/learning-app-ecommerce.conf
+++ b/learning-app-ecommerce.conf
@@ -39,7 +39,7 @@ server {
 	#
 	# include snippets/snakeoil.conf;
 
-	root /var/www/html/learning-app-ecommerce;
+	root /var/www/html;
 
 	# Add index.php to the list if you are using PHP
 	index index.php;
@@ -65,9 +65,9 @@ server {
 	# deny access to .htaccess files, if Apache's document root
 	# concurs with nginx's one
 	#
-	#location ~ /\.ht {
-	#	deny all;
-	#}
+	location ~ /\.ht {
+		deny all;
+	}
 }
 
 
