--- a/default.conf
+++ b/default.conf
@@ -6,7 +6,7 @@ server {
 
     location / {
         root   /usr/share/nginx/html;
-        index  index.html index.htm;
+        index  index.php;
     }
 
     #error_page  404              /404.html;
@@ -27,11 +27,15 @@ server {
     # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
     #
     location ~ \.php$ {
-        root           html;
-        fastcgi_pass   127.0.0.1:9000;
-        fastcgi_index  index.php;
-        fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-        include        fastcgi_params;
+        #root           html;
+        #fastcgi_pass   127.0.0.1:9000;
+        #fastcgi_index  index.php;
+        #fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
+        #include        fastcgi_params;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass unix:/var/run/php8.2-fpm-wordpress-site.sock;
+        fastcgi_index index.php;
+        include fastcgi.conf;
     }
 }
 
