--- a/default.conf
+++ b/default.conf
@@ -35,7 +35,7 @@ server {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass unix:/var/run/php8.2-fpm-wordpress-site.sock;
         fastcgi_index index.php;
-        include fastcgi.conf;
+        #include fastcgi.conf;
     }
 }
 
