--- a/default.conf
+++ b/default.conf
@@ -1,22 +1,22 @@
 server {
     listen       80;
     server_name  localhost;
-
+    root   /usr/share/nginx/html;
+    index  index.php;
     #access_log  /var/log/nginx/host.access.log  main;
 
     location / {
-        root   /usr/share/nginx/html;
-        index  index.php;
+            try_files $uri $uri/ =404
     }
 
     #error_page  404              /404.html;
 
     # redirect server error pages to the static page /50x.html
     #
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
-    }
+    #error_page   500 502 503 504  /50x.html;
+    #location = /50x.html {
+    #    root   /usr/share/nginx/html;
+    #}
 
     # proxy the PHP scripts to Apache listening on 127.0.0.1:80
     #
@@ -27,15 +27,21 @@ server {
     # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
     #
     location ~ \.php$ {
-        #root           html;
-        #fastcgi_pass   127.0.0.1:9000;
-        #fastcgi_index  index.php;
-        #fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-        #include        fastcgi_params;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass unix:/var/run/php8.2-fpm-wordpress-site.sock;
+        include  fastcgi_params;
+        fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_pass unix:/var/run/php/php8.2-fpm.sock;
         fastcgi_index index.php;
-        #include fastcgi.conf;
     }
 }
+
+
+
+
+
+
+
+
+
+
+
 
