--- a/default.conf
+++ b/default.conf
@@ -6,7 +6,7 @@ server {
     #access_log  /var/log/nginx/host.access.log  main;
 
     location / {
-            try_files $uri $uri/ =404
+            try_files $uri $uri/ =404;
     }
 
     #error_page  404              /404.html;
